dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationOCTT__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Acc_Package_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Acc Package Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Package_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Case Package Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Package_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Contact Package Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Package_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>SA Package Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SB_Package_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>SB Package Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCR_Package_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>SCR Package Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Package_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <label>SC Package Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeout_Limit__c</fullName>
        <defaultValue>60000</defaultValue>
        <label>Timeout Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration settings for OCTT</label>
</CustomObject>